Closed
Bug 257430
Opened 21 years ago
Closed 21 years ago
regression: can't click button on page
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
VERIFIED
FIXED
People
(Reporter: csthomas, Assigned: roc)
References
()
Details
(Keywords: regression, testcase)
Attachments
(3 files)
|
271 bytes,
text/html
|
Details | |
|
1.97 KB,
text/plain
|
Details | |
|
3.38 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
The offical 8/24 nightly WFM, official 8/26 nightly doesn't work. 08/25
wouldn't run so I couldn't test it. I can't click any of the buttons in the
second row.
Comment 2•21 years ago
|
||
Regression window: 2004-08-25-05 -- 2004-08-26-05
After backing out bug 133165 it does not occur (I got one reject I had to fix
manually, so I'm only 99% sure).
OS: Windows XP → All
Comment 3•21 years ago
|
||
Comment 4•21 years ago
|
||
The change to nsIFrame::FinishAndStoreOverflow is rather suspect (or rather,
it's the only change that should affect anything but painting). Does reverting
just that hunk (and mucking with it to get it to compile) help?
Assignee: nobody → roc
Component: Layout → Layout: View Rendering
Flags: blocking1.8a4?
QA Contact: core.layout → ian
| Assignee | ||
Updated•21 years ago
|
Priority: -- → P2
| Assignee | ||
Comment 5•21 years ago
|
||
This bug is intriguing. Giving the floated input control the focus reflows it
incrementally, and that results in an incorrect computed overflow area for the
block (nearly empty). I think we just revealed a bug in incremental reflow.
Comment 6•21 years ago
|
||
FWIW, this fixes the problem in a current trunk tree.
(and the focus outline is all around the image).
| Assignee | ||
Comment 7•21 years ago
|
||
That shouldn't be necessary because frames are supposed to already include their
bounds in the reflow state's mOverflowArea. The fact that this isn't happening
is the problem...
| Assignee | ||
Comment 8•21 years ago
|
||
Image frames need to set their overflow area to their bounds.
Also adds an assertion to FinishAndStoreOverflow to catch any more violations.
That caught nsTableRowFrame seeming to change a cell's width and height without
adjusting its overflow area. I don't know how this can be correct, but I add a
fix there to make sure the overflow area includes the new cell bounds.
| Assignee | ||
Comment 9•21 years ago
|
||
Comment on attachment 157578 [details] [diff] [review]
fix
making sure that frames compute an overflow area that includes their bounds
Attachment #157578 -
Flags: superreview?(dbaron)
Attachment #157578 -
Flags: review?(dbaron)
Attachment #157578 -
Flags: superreview?(dbaron)
Attachment #157578 -
Flags: superreview+
Attachment #157578 -
Flags: review?(dbaron)
Attachment #157578 -
Flags: review+
| Assignee | ||
Comment 10•21 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Updated•21 years ago
|
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Flags: blocking1.8a4?
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•