Bug 257430. nsImageFrame and nsTableRowFrame need to always include their frame bounds in their overflow area. r+sr=dbaron